# ocl-tech-challenge

./: .gitignore  README.md  instructions.md  pyproject.toml  readme.md
devops/development/: docker-compose.yaml
src/config/: settings.py  urls.py
src/scraper/: full_title_scraper.py
src/scripts/: scrape_valuations.py
src/valuations/: api.py  constants.py  models.py  urls.py  views.py
src/valuations/management/commands/: scrape_valuations.py
src/valuations/migrations/: 0001_initial.py  0002_alter_valuation_city_alter_valuation_last_modified.py  0003_alter_valuation_market_value_and_more.py
src/valuations/services/: get_valuation_suburbs.py  scraper.py  valuation_table_utils.py
