[tool.poetry]
name = "ocl-tech-challenge"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
readme = "README.md"
packages = [{include = "ocl_tech_challenge"}]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
