[tool.poetry]
name = "ocl-tech-challenge"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
readme = "README.md"
packages = [{include = "ocl_tech_challenge"}]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.2.1"
django = "^5.0.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pandas = "^2.2.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
