[tool.poetry]
name = "ocl-tech-challenge"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "valuations", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
psycopg = { extras = ["binary"], version = "^3.2.1" }
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
